# boids-rs

./: Cargo.toml  README.md
src/: boid.rs  color.rs  flock.rs  keys.rs  main.rs  math.rs  model.rs  text.rs  update.rs  window.rs
